Shuffling input; formatting