@@ -19,6 +19,7 @@ import static java.lang.Integer.parseInt;
 import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
@@ -28,13 +29,13 @@ import java.util.TreeMap;
 import java.util.function.Function;
 import java.util.stream.Collector;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import org.apache.commons.net.util.SubnetUtils;
 import org.apache.commons.net.util.SubnetUtils.SubnetInfo;
 import org.junit.Test;
 
+import one.util.streamex.IntStreamEx;
 import one.util.streamex.StreamEx;
 
 /**
@@ -43,23 +44,20 @@ import one.util.streamex.StreamEx;
  * @author Tagir Valeev
  */
 public class Issue0029 {
-	private static final String _192_168_0_0_16 = "192.168.0.0/16";
-	private static final String EXPECTED = "[T[" + _192_168_0_0_16 + "]]";
-	
-	static class IntervalMap<E, U extends Comparable<U>>
-	{
-	    private final Function<E, U> endExtractor;
+    private static final String _192_168_0_0_16 = "192.168.0.0/16";
+    private static final String EXPECTED = "[T[" + _192_168_0_0_16 + "]]";
+
+    static class IntervalMap<E, U extends Comparable<U>> {
+        private final Function<E, U> endExtractor;
         private final Function<E, U> startExtractor;
         private final NavigableMap<U, E> map = new TreeMap<>();
 
-        public IntervalMap(Function<E, U> startExtractor, Function<E, U> endExtractor)
-	    {
-	        this.startExtractor = startExtractor;
-	        this.endExtractor = endExtractor;
-	    }
-        
-        public void accept(E element)
-        {
+        public IntervalMap(Function<E, U> startExtractor, Function<E, U> endExtractor) {
+            this.startExtractor = startExtractor;
+            this.endExtractor = endExtractor;
+        }
+
+        public void accept(E element) {
             U start = startExtractor.apply(element);
             U end = endExtractor.apply(element);
             Entry<U, E> floorEntry = map.floorEntry(start);
@@ -69,131 +67,127 @@ public class Issue0029 {
                     return;
             }
             Entry<U, E> ceilingEntry = map.ceilingEntry(end);
-            if(ceilingEntry != null) {
+            if (ceilingEntry != null) {
                 Entry<U, E> lowerEntry = map.lowerEntry(end);
-                if(lowerEntry != null && lowerEntry.getValue() == ceilingEntry.getValue())
-                return;
+                if (lowerEntry != null && lowerEntry.getValue() == ceilingEntry.getValue())
+                    return;
             }
             map.subMap(start, true, end, true).clear();
             map.put(start, element);
             map.put(end, element);
         }
-        
-        public IntervalMap<E, U> combine(IntervalMap<E, U> other)
-        {
-            if(map.isEmpty())
+
+        public IntervalMap<E, U> combine(IntervalMap<E, U> other) {
+            if (map.isEmpty())
                 return other;
             // More efficient implementation is possible
-            for(E t : other.asCollection())
-            {
+            for (E t : other.asCollection()) {
                 accept(t);
             }
             return this;
         }
-        
-        public List<E> asCollection()
-        {
-            List<E> result = new ArrayList<>(map.size()/2);
+
+        public List<E> asCollection() {
+            List<E> result = new ArrayList<>(map.size() / 2);
             Iterator<E> iterator = map.values().iterator();
-            while(iterator.hasNext())
-            {
+            while (iterator.hasNext()) {
                 E val = iterator.next();
-                if(!Objects.equals(val, iterator.next()))
+                if (!Objects.equals(val, iterator.next()))
                     throw new InternalError(map.toString());
                 result.add(val);
             }
             return result;
         }
-        
+
         public static <E, U extends Comparable<U>> Collector<E, ?, List<E>> collector(Function<E, U> startExtractor,
                 Function<E, U> endExtractor) {
             return Collector.<E, IntervalMap<E, U>, List<E>> of(() -> new IntervalMap<>(startExtractor, endExtractor),
                 IntervalMap::accept, IntervalMap::combine, IntervalMap::asCollection);
         }
-	}
-	
+    }
 
-	static class T implements Comparable<T> {
-		SubnetInfo info;
+    static class T implements Comparable<T> {
+        SubnetInfo info;
 
-		public T(String cidr) {
-			SubnetUtils tmp = new SubnetUtils(cidr);
-			tmp.setInclusiveHostCount(true);
-			this.info = tmp.getInfo();
-			
-		}
+        public T(String cidr) {
+            SubnetUtils tmp = new SubnetUtils(cidr);
+            tmp.setInclusiveHostCount(true);
+            this.info = tmp.getInfo();
 
-		public boolean isParent(T child) {
-			return this.info.isInRange(child.info.getNetworkAddress()) && rPrefix() <= child.rPrefix();
-		}
+        }
 
-		private int rPrefix() {
-			String cidrSignature = info.getCidrSignature();
-			String iPrefix = cidrSignature.substring(cidrSignature.lastIndexOf('/') + 1);
-			return Integer.parseInt(iPrefix);
-		}
+        public boolean isParent(T child) {
+            return this.info.isInRange(child.info.getNetworkAddress()) && rPrefix() <= child.rPrefix();
+        }
 
-	    private int getLowerKey() {
-	        return info.asInteger(info.getLowAddress());
-	    }
+        private int rPrefix() {
+            String cidrSignature = info.getCidrSignature();
+            String iPrefix = cidrSignature.substring(cidrSignature.lastIndexOf('/') + 1);
+            return Integer.parseInt(iPrefix);
+        }
 
-	    private int getHigherKey() {
-	        return info.asInteger(info.getHighAddress());
-	    }
+        private int getLowerKey() {
+            return info.asInteger(info.getLowAddress());
+        }
 
-		@Override
-		public String toString() {
-			return "T[" + info.getCidrSignature() + "]";
-		}
+        private int getHigherKey() {
+            return info.asInteger(info.getHighAddress());
+        }
 
-		@Override
-		public int compareTo(T o) {
-			String[] b1 = info.getNetworkAddress().split("\\.");
-			String[] b2 = o.info.getNetworkAddress().split("\\.");
-			int res;
-			for (int i = 0; i < 4; i++) {
-				res = parseInt(b1[0]) - parseInt(b2[0]);
-				if (res != 0)
-					return res;
-			}
-			return rPrefix() - o.rPrefix();
-		}
-	}
+        @Override
+        public String toString() {
+            return "T[" + info.getCidrSignature() + "]";
+        }
 
-	private Stream<T> getTestData() {
-		// Stream of parent net 192.168.0.0/16 follow by the 50 first childs
-		// 192.168.X.0/24
-		return Stream
-				.concat(Stream.of(_192_168_0_0_16),
-						IntStream.range(0, 50).mapToObj(String::valueOf).map(i -> "192.168." + i + ".0/24"))
-				.map(T::new);
-	}
+        @Override
+        public int compareTo(T o) {
+            String[] b1 = info.getNetworkAddress().split("\\.");
+            String[] b2 = o.info.getNetworkAddress().split("\\.");
+            int res;
+            for (int i = 0; i < 4; i++) {
+                res = parseInt(b1[0]) - parseInt(b2[0]);
+                if (res != 0)
+                    return res;
+            }
+            return rPrefix() - o.rPrefix();
+        }
+    }
 
-	@Test
-	public void testCollect() {
-	    List<T> result = StreamEx.of(getTestData()).collect(IntervalMap.collector(T::getLowerKey, T::getHigherKey));
-	    assertEquals(EXPECTED, result.toString());
-	    List<T> resultPar = StreamEx.of(getTestData()).parallel().collect(IntervalMap.collector(T::getLowerKey, T::getHigherKey));
-	    assertEquals(EXPECTED, resultPar.toString());
-	}
-	
-	@Test
-	public void testPlain() {
-		List<T> tmp = getTestData().sorted().collect(Collectors.toList());
-		Iterator<T> it = tmp.iterator();
-		T curr, last;
-		curr = last = null;
-		while (it.hasNext()) {
-			T oldLast = last;
-			last = curr;
-			curr = it.next();
-			if (last != null && last.isParent(curr)) {
-				it.remove();
-				curr = last;
-				last = oldLast;
-			}
-		}
-		List<T> result = tmp.stream().collect(Collectors.toList());
-		assertEquals(EXPECTED, result.toString());
-	}
+    private Stream<T> getTestData() {
+        // Stream of parent net 192.168.0.0/16 follow by the 50 first childs
+        // 192.168.X.0/24
+        List<T> list = IntStreamEx.range(50).mapToObj(String::valueOf).map(i -> "192.168." + i + ".0/24")
+                .append(_192_168_0_0_16).map(T::new).toList();
+        Collections.shuffle(list);
+        return list.stream();
+    }
+
+    @Test
+    public void testCollect() {
+        List<T> result = StreamEx.of(getTestData()).collect(IntervalMap.collector(T::getLowerKey, T::getHigherKey));
+        assertEquals(EXPECTED, result.toString());
+        List<T> resultPar = StreamEx.of(getTestData()).parallel()
+                .collect(IntervalMap.collector(T::getLowerKey, T::getHigherKey));
+        assertEquals(EXPECTED, resultPar.toString());
+    }
+
+    @Test
+    public void testPlain() {
+        List<T> tmp = getTestData().sorted().collect(Collectors.toList());
+        Iterator<T> it = tmp.iterator();
+        T curr, last;
+        curr = last = null;
+        while (it.hasNext()) {
+            T oldLast = last;
+            last = curr;
+            curr = it.next();
+            if (last != null && last.isParent(curr)) {
+                it.remove();
+                curr = last;
+                last = oldLast;
+            }
+        }
+        List<T> result = tmp.stream().collect(Collectors.toList());
+        assertEquals(EXPECTED, result.toString());
+    }
 }
